# Translator

./: .gitignore  BACKUP_INSTRUCTIONS.md  CHANGELOG.md  GEMINI.md  debug_format.js  debug_name_hunter.ts  debug_safe_comma.js  findings.md  formatting_result.txt  formatting_result_v2.txt  legacy_dialog.txt  legacy_dialog_utf8.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  progress.md  sample_chinese.txt  sample_tone_test.txt  tailwind.config.js  tailwind.config.ts  task_plan.md  tsconfig.json  verify_latest_fix.js
.agent/knowledge/: AI_WORKFLOW.md  PERFORMANCE.md  SECURITY.md  UI_UX.md
.brain/: brain.json  session.json
app/: globals.css  layout.tsx  page.tsx
app/chapter/: page.tsx
app/tts-test/: page.tsx
app/workspace/: page.tsx
brain/: session.json.bak
components/: ErrorBoundary.tsx
components/dashboard/: NewWorkspaceDialog.tsx  WorkspaceList.tsx
components/editor/: DictionaryEditDialog.tsx  SettingsDialog.tsx
components/layout/: GlobalTranslationProgress.tsx  StatusBar.tsx  TitleBar.tsx
components/name-hunter/: CandidateTable.tsx  NameHunterDialog.tsx
components/reader/: TTSPlayer.tsx
components/shared/: ErrorBoundary.tsx
components/theme/: RaidenProvider.tsx
components/ui/: alert-dialog.tsx  (+7 more)
lib/: AUDIT_REPORT.md  ai-models.ts  db.ts  dictionary-manager.ts  edgeTTS.ts  export-import.ts  fix-brackets.ts  gemini.ts  googleDrive.ts  storageBridge.ts  tts.ts  types.ts
public/: 404.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  tts.rs
(+125 files in other folders)
